--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -15,6 +15,7 @@
 \documentclass{hogent-article}
 
 \usepackage{lipsum} % Voor vultekst
+\usepackage{amsmath}
 
 %------------------------------------------------------------------------------
 % Metadata over het artikel
@@ -87,25 +88,27 @@
     \section{Inleiding}
     
     % TODO: (fase 2) introduceer je gekozen onderwerp, formuleer de onderzoeksvraag en deelvragen. Wat is de doelstelling (is die S.M.A.R.T.?), wat zal het resultaat zijn van het onderzoek (een Proof-of-Concept, een prototype, een advies, ...)? Waarom is het nuttig om dit onderwerp te onderzoeken?
-    Het ontwikkelen van een geautomatiseerd proces om de data van een Huawei omvormer SUN2000 uit te lezen, op te slaan en weer te geven. Vandaag beschikken meer en meer gezinnen over een zonnepaneleninstallatie op hun woning. We maken de veronderstelling dat die gezinnen ook geïnteresseerd zijn om de opbrengst van hun installatie te kennen. Elke installatie bestaat onder andere uit een omvormer. Dit toestel zet de opgewekte gelijkstroom van de zonnepanelen om in wisselstroom voor gebruik op het elektrische net. De omvormer beschikt ook over onderdelen die de hoeveelheid geproduceerde stroom meten. Typisch biedt de fabrikant van de omvormer een applicatie aan waarop de gebruiker de opbrengst van zijn installatie kan raadplegen. Wij maken de veronderstelling dat een groot aantal gebruikers deze gegevens maandelijks overneemt in een Excel bestand om op die manier de evolutie van de opbrengst bij te houden.
-    Dit kan beter. Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen zodat de gebruiker zelf op elk moment over de meest recente cijfers van zijn installatie beschikt. Dit op zich lijkt op het eerste zicht niet zo'n verbetering, want de gebruiker beschikt ook over die gegevens via de applicatie van de fabrikant. Maar het wordt wel interessant wanneer we deze gegevens zouden kunnen combineren met die van de digitale meter. Dan kunnen er waarden berekend worden zoals zelfconsumptie (totale opbrengst - geïnjecteerde opbrengst) en zelfvoorzienendheid (zelfconsumptie / (zelfconsumptie + verbruik)).
-    Het onderzoeksvoorstel is dus zeer SPECIFIEK en toepasbaar. Het is ook MEETBAAR want de gegevens kunnen gecontroleerd met die van de fabrikant. Het is ook ACTUEEL aangezien meer en meer gezinnen beschikken over een installatie. Het is REALISTISCH want het plaatsen van de toestellen wordt de komende jaren meer en meer uitgerold. Tenslotte is het ook TIJDSGEBONDEN want de architectuur van de applicatie laat ons toe om een Minimal Viable Product (MVP) te definiëren bestaande uit:
+    Vandaag beschikken meer en meer gezinnen over een zonnepaneleninstallatie op hun woning. Elke installatie bestaat onder andere uit een omvormer. Dit toestel zet de opgewekte gelijkstroom van de zonnepanelen om in wisselstroom voor gebruik op het elektrische net. De omvormer beschikt ook over onderdelen die de hoeveelheid geproduceerde stroom meten. Typisch biedt de fabrikant van de omvormer een applicatie aan waarop de gebruiker de opbrengst van zijn installatie kan raadplegen. Wij maken de veronderstelling dat een groot aantal gebruikers deze gegevens maandelijks overneemt in een Excel bestand om op die manier de evolutie van de opbrengst bij te houden.\newline
+    Dit kan beter. Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen zodat de gebruiker zelf dagelijks over de meest recente cijfers van zijn installatie beschikt. Dit op zich lijkt op het eerste zicht niet zo'n verbetering, want de gebruiker beschikt ook over die gegevens via de applicatie van de fabrikant. Maar het wordt wel interessant wanneer we deze gegevens zouden kunnen combineren met die van de digitale meter. Dan kunnen er waarden berekend worden zoals \begin{equation*}zelfconsumptie = totale opbrengst - geïnjecteerde opbrengst\end{equation*} en \begin{equation*}zelfvoorzienendheid = zelfconsumptie / (zelfconsumptie + verbruik)\end{equation*}.\newline
+    Voor dit onderzoek beperken we ons tot één specifieke omvormer: de Huawei omvormer SUN2000. Dit toestel wordt gebruikt om een Proof-of-Concept (POC) te ontwikkelen dat in staat moet zijn om de data van een Huawei omvormer SUN2000 lokaal uit te lezen, op te slaan en weer te geven.\newline
+    De omvormer is via WiFi (of via ethernet) verbonden met de router in het huis en kan zo communiceren met de server van de fabrikant waar de gegevens gemonitord en opgeslaan worden. Onze applicatie moet in staat zijn om lokaal met de omvormer te connecteren en de gegevens op te vragen. Vervolgens moeten de opgevraagde gegevens lokaal opgeslaan worden en op vraag van de gebruiker gevisualiseerd kunnen worden.\newline
+    Het onderzoeksvoorstel is dus zeer SPECIFIEK en toepasbaar. Het is ook MEETBAAR want de gegevens kunnen gecontroleerd worden met die van de fabrikant. Het is ook ACTUEEL aangezien meer en meer gezinnen beschikken over een installatie. Het is REALISTISCH want het plaatsen van de toestellen wordt de komende jaren meer en meer uitgerold. Tenslotte is het ook TIJDSGEBONDEN want de architectuur van de applicatie laat ons toe om een Minimal Viable Product (MVP) te definiëren bestaande uit:
     \begin{itemize}
         \item Connecteren met de omvormer over lokaal netwerk
         \item Data uitlezen via API van de omvormer
         \item Data opslaan
-    \end{itemize}
-    Andere deelvragen van het onderzoek zoals:
-    \begin{itemize}
         \item Data visualiseren
-        \item App op smartphone voor perfecte usability
-        \item Uitlezen data van de digitale meter
-        \item Berekenen van betekenisvolle afgeleide waarden
-        \item Centrale opslag van de gegevens per gebruiker via een client-server architectuur
     \end{itemize}
-    kunnen afzonderlijk ontwikkeld worden.
-    Het doel van dit onderzoek is om een werkend systeem te ontwikkelen dat een gebruiker toe laat om ten allen tijde de opbrengst van zijn installatie tot op heden te raadplegen. Als Proof Of Concept (POC) wordt er gewerkt met de Huawei omvormer SUN2000.
-    \lipsum[1-3]
+    Verder is het onderwerp uitermate geschikt om de MVP uit te breiden met verbeteringen zoals usability en ondersteuning voor andere installaties. Daarnaast kunnen ook afgeleide toepassingen die verder bouwen op de POC ontwikkeld worden zoals combinatie met de waarden van de digitale meter, client-server architectuur enz.:
+    \begin{itemize}
+        \item Mobile App voor perfecte usability
+        \item Uitlezen data van de digitale meter
+        \item Berekenen van betekenisvolle afgeleide waarden zoal zelfconsumptie en zelfvoorzienendheid
+        \item Centrale opslag van de gegevens per gebruiker via een client-server architectuur
+        \item Machine learning aan de hand van de geregistreerde gegevens
+    \end{itemize}
+    De aangehaalde doelstellingen en mogelijke uitbreiding zijn zeer relevant voor de maatschappij in het algemeen. Niet alleen de gebruiker zelf heeft baat bij het begrijpen van zijn installatie, ook het beleid en de energiesector heeft meer en meer nood aan representatieve en actuele data van het energielandschap van vandaag.\newline
+    Het doel van dit onderzoek is om een werkend systeem te ontwikkelen dat een gebruiker toe laat om dagelijks de opbrengst van zijn Huawei omvormer SUN2000 tot op heden te raadplegen. 
     
     \section{Overzicht literatuur}
     
