literatuurstudie: IoT, home automation, open-HAB, Raspberry Pi

--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -88,7 +88,7 @@
     \section{Inleiding}
     
     % TODO: (fase 2) introduceer je gekozen onderwerp, formuleer de onderzoeksvraag en deelvragen. Wat is de doelstelling (is die S.M.A.R.T.?), wat zal het resultaat zijn van het onderzoek (een Proof-of-Concept, een prototype, een advies, ...)? Waarom is het nuttig om dit onderwerp te onderzoeken?
-    Vandaag beschikken meer en meer gezinnen over een zonnepaneleninstallatie op hun woning. Elke installatie bestaat onder andere uit een omvormer. Dit toestel zet de opgewekte gelijkstroom van de zonnepanelen om in wisselstroom voor gebruik op het elektrische net. De omvormer beschikt ook over onderdelen die de hoeveelheid geproduceerde stroom meten. Typisch biedt de fabrikant van de omvormer een applicatie aan waarop de gebruiker de opbrengst van zijn installatie kan raadplegen. Wij maken de veronderstelling dat een groot aantal gebruikers deze gegevens maandelijks overneemt in een Excel bestand om op die manier de evolutie van de opbrengst bij te houden.\newline
+    Vandaag beschikken meer en meer gezinnen over een zonnepaneleninstallatie op hun woning. Elke installatie bestaat onder andere uit een omvormer. Dit toestel zet de opgewekte gelijkstroom van de zonnepanelen om in wisselstroom voor gebruik op het elektrische net \autocite{Teodorescu_2011}. De omvormer beschikt ook over onderdelen die de hoeveelheid geproduceerde stroom meten. Typisch biedt de fabrikant van de omvormer een applicatie aan waarop de gebruiker de opbrengst van zijn installatie kan raadplegen. Wij maken de veronderstelling dat een groot aantal gebruikers deze gegevens maandelijks overneemt in een Excel bestand om op die manier de evolutie van de opbrengst bij te houden.\newline
     Dit kan beter. Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen zodat de gebruiker zelf dagelijks over de meest recente cijfers van zijn installatie beschikt. Dit op zich lijkt op het eerste zicht niet zo'n verbetering, want de gebruiker beschikt ook over die gegevens via de applicatie van de fabrikant. Maar het wordt wel interessant wanneer we deze gegevens zouden kunnen combineren met die van de digitale meter. Dan kunnen er waarden berekend worden zoals \begin{equation*}zelfconsumptie = totale opbrengst - geïnjecteerde opbrengst\end{equation*} en \begin{equation*}zelfvoorzienendheid = zelfconsumptie / (zelfconsumptie + verbruik)\end{equation*}.\newline
     Voor dit onderzoek beperken we ons tot één specifieke omvormer: de Huawei omvormer SUN2000. Dit toestel wordt gebruikt om een Proof-of-Concept (POC) te ontwikkelen dat in staat moet zijn om de data van een Huawei omvormer SUN2000 lokaal uit te lezen, op te slaan en weer te geven.\newline
     De omvormer is via WiFi (of via ethernet) verbonden met de router in het huis en kan zo communiceren met de server van de fabrikant waar de gegevens gemonitord en opgeslaan worden. Onze applicatie moet in staat zijn om lokaal met de omvormer te connecteren en de gegevens op te vragen. Vervolgens moeten de opgevraagde gegevens lokaal opgeslaan worden en op vraag van de gebruiker gevisualiseerd kunnen worden.\newline
@@ -119,7 +119,44 @@
     % \textcite{BIBTEXKEY} -> Auteur (jaartal)
     Voorbeeld van een referentie waar de auteursnaam geen onderdeel van de zin is~\autocite{Moore2002}.
     
-    \lipsum[4-9]
+    Het aandeel van energie uit fotovoltaïsche cellen groeit jaarlijks \autocite{Shurtleff_2018}. Zonneënergie vormt daarom een belangrijke bijdrage aan de energiemix. De dalende prijzen van de fotovoltaïsche installaties, de zoektocht naar groene energie, het maatschappelijk draagvlak en de overheidspremies zijn allemaal elementen die de overstap naar zonneënergie versnellen \autocite{Kouro_2016}. Fotovoltaïsche installaties bestaan onder andere uit een omvormer, een hoogtechnologisch toestel dat naast het omzetten van gelijkstroom naar wisselstroom ook data genereert over de opbrengst. Een omvormer kan ook communiceren over het netwerk om zo via het internet die data op te slaan op remote servers van de fabrikant \autocite{Huawei}. Op die manier maken omvormers per definitie dus deel uit van het Internet of Things (IoT), een IT fenomeen dat het laatste decennium enorm aan belangstelling wint. Eén van de voornaamste gevolgen van IoT is het automatisch aanmaken van ongeziene hoeveelheden data \autocite{Gubbi_2013} \autocite{Kassab_2020}. Efficiënte toegang tot deze gegevens via mobiele applicaties zorgt ervoor dat het gehele internet meer en meer verweven geraakt met IoT. Niet alleen de eindgebruiker, maar de gehele maatschappij is gebaat bij het meten en delen van massa's informatie. Het zal ons in staat stellen om de dienstverlening te verbeteren zoals bijvoorbeeld het optimaliseren van het energieverbruik via het introduceren van de slimme meter \autocite{Gubbi_2013}.
+    
+    IoT wordt voor het eerst benoemd door \textcite{Ashton_2009}. IoT verwijst naar slimme objecten, toestellen en sensoren die uniek adresseerbaar zijn op basis van hun communicatieprotocollen. Ze zijn autonoom en aanpasbaar met voldoende ingebouwde veiligheid \autocite{Shafique_2020}. De impact die IoT technologie kan hebben, blijft echter niet beperkt tot de waarde van één enkel object. De functionaliteit van één product kan verder uitgebreid worden wanneer het gekoppeld wordt aan gerelateerde producten \autocite{Wortmann_2015}. Het ultieme doel van IoT technologie is om ons het leven aangenamer te maken, omgeven door slimme objecten die weten wat we nodig hebben \autocite{Kassab_2020}.
+    
+    Eén van de toepassingen van de IoT technologie is het smart grid. Het bestaat uit een elektrisch netwerk dat op een intelligente manier de activiteiten van vele gebruikers verbindt. Producenten en verbruikers die verbonden zijn via het smart grid zullen uiteindelijk zorgen voor een rendabele, duurzame en betrouwbare energiebron \autocite{Kassab_2020} .
+    
+    Een andere toepassing van de IoT technologie is het smart home. Het transformeert een woning in een geäutomatiseerd gebouw vol met geïnstalleerde en gecontroleerde slimme objecten. De algemene architectuur van een smart home laat die objecten communiceren met een centraal beheersysteem dat kan bediend worden via een app op de smartphone \autocite{Kassab_2020}. Een smart home biedt functies voor het welzijn, de veiligheid, het vermaak en het comfort van de bewoners \autocite{Choi_2021}.
+    
+    Het centrale beheersysteem draait software die moet toelaten om heel uiteenlopende slimme objecten te verbinden en weer te geven op de smartphone \autocite{Setz_2021}. Er bestaan zowel commerciële als open-source oplossingen. Vandaag zien we meer en meer dat de smart home componenten gebruik maken van het internet voor hun communicatie en van standaarden voor een betere interoperabiliteit. Een goed systeem steunt op volgende principes: \begin{itemize}
+        \item open API's
+        \item interoperabele protocollen
+        \item integreer ook de meest eenvoudige toestellen
+        \item beheer heterogene systemen centraal
+    \end{itemize}
+
+    Open Home Automation Bus (open-HAB) is één van de open-source beheersystemen. Het is fabrikant onafhankelijk en werkt met vele protocollen en toestellen waardoor het een centrale plaats inneemt in de smart home \autocite{Domb_2019}. Door deze flexibiliteit tezamen met een goed uitgebouwde community achter het systeem, werken wij verder met open-HAB. \textcite{Sowah_2020} bouwt een hele architectuur met centraal open-HAB voor de smart home. We zien dat open-HAB op een Raspberry Pi microcontroller geïnstalleerd wordt en fungeert als centrale server voor het systeem.
+    
+    Met de opkomst van het IoT is er nood aan goedkope en flexibele hardware. Raspberry Pi vervult deze eisen doordat het uitbreidbaar is en telkens weer kan omgebouwd worden tot een andere component die enkele specifieke taken vervult \autocite{Maksimovic_2015}.
+    
+    
+    
+    
+    
+    
+    Wat is IoT
+    
+    Smart grid
+    
+    Smart home
+    
+    Home automation
+    
+    Raspberry Pi
+    
+    OpenHAB
+    
+    POC Huawei SUN2000
+    
     
     \section{Methodologie}
     
