--- a/paper/bibliografie.bib
+++ b/paper/bibliografie.bib
@@ -1,5 +1,3 @@
-% Encoding: UTF-8
-
 @BOOK{Moore2002,
   title = {Introduction to the Practice of Statistics},
   publisher = {W. H. Freeman},
@@ -16,6 +14,389 @@
   author = {Smits, Johan and Edens, Ronald},
   owner = {jbuy519},
   timestamp = {2014.01.23}
+}
+
+@Article{Hacke2018,
+  author       = {Peter Hacke and Sumanth Lokanath and Paul Williams and Arvind Vasan and Paul Sochor and GovindaSamy TamizhMani and Hirofumi Shinohara and Sarah Kurtz},
+  date         = {2018-02},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+  title        = {A status review of photovoltaic power conversion equipment reliability, safety, and quality assurance protocols},
+  doi          = {10.1016/j.rser.2017.07.043},
+  pages        = {1097--1112},
+  volume       = {82},
+}
+
+@Book{Teodorescu2011,
+  author       = {Teodorescu, Remus and Liserre, Marco and Rodriguez, Pedro},
+  date         = {2011-02},
+  title        = {Grid Converters for Photovoltaic and Wind Power Systems},
+  doi          = {10.1016/j.rser.2017.07.043},
+  isbn         = {0470057513},
+  pages        = {1097--1112},
+  publisher    = {John Wiley & Sons},
+  url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
+  volume       = {82},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+}
+
+@Book{Teodorescu2014,
+  author       = {Teodorescu, Remus and Liserre, Marco and Rodriguez, Pedro},
+  date         = {2014-02},
+  title        = {Internet of Things},
+  doi          = {10.1007/978-3-319-04223-7},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {0470057513},
+  pages        = {1097--1112},
+  publisher    = {Springer International Publishing},
+  url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
+  volume       = {82},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+}
+
+@Book{Hulsebos2019,
+  author       = {Hulsebos, Rob},
+  date         = {2019-02},
+  title        = {Modbus : the manual},
+  doi          = {10.1007/978-3-319-04223-7},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {0470057513},
+  pages        = {1097--1112},
+  publisher    = {S.l. : s.n., 2019},
+  url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
+  volume       = {82},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+}
+
+@Book{Hanes2017,
+  author       = {Hanes, David and Salgueiro, Gonzalo and Grossetete, Patrick},
+  date         = {2017-06},
+  title        = {IoT Fundamentals: Networking Technologies, Protocols, and Use Cases for the Internet of Things},
+  doi          = {10.1007/978-3-319-04223-7},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  pages        = {1097--1112},
+  publisher    = {CISCO},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {82},
+  journaltitle = {Renewable and Sustainable Energy Reviews},
+}
+
+@Article{Kassab2020,
+  author       = {Wafa{\textquotesingle}a Kassab and Khalid A. Darabkh},
+  date         = {2020-08},
+  journaltitle = {Journal of Network and Computer Applications},
+  title        = {A{\textendash}Z survey of Internet of Things: Architectures, protocols, applications, recent advances, future directions and recommendations},
+  doi          = {10.1016/j.jnca.2020.102663},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  pages        = {102663},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {163},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Gubbi2013,
+  author       = {Jayavardhana Gubbi and Rajkumar Buyya and Slaven Marusic and Marimuthu Palaniswami},
+  date         = {2013-09},
+  journaltitle = {Future Generation Computer Systems},
+  title        = {Internet of Things ({IoT}): A vision, architectural elements, and future directions},
+  doi          = {10.1016/j.future.2013.01.010},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {7},
+  pages        = {1645--1660},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {29},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Lee2015,
+  author       = {In Lee and Kyoochun Lee},
+  date         = {2015-07},
+  journaltitle = {Business Horizons},
+  title        = {The Internet of Things ({IoT}): Applications, investments, and challenges for enterprises},
+  doi          = {10.1016/j.bushor.2015.03.008},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {4},
+  pages        = {431--440},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {58},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Shafique2020,
+  author       = {Kinza Shafique and Bilal A. Khawaja and Farah Sabir and Sameer Qazi and Muhammad Mustaqim},
+  date         = {2020-07},
+  journaltitle = {{IEEE} Access},
+  title        = {Internet of Things ({IoT}) for Next-Generation Smart Systems: A Review of Current Challenges, Future Trends and Prospects for Emerging 5G-{IoT} Scenarios},
+  doi          = {10.1109/access.2020.2970118},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {4},
+  pages        = {23022--23040},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {8},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Wortmann2015,
+  author       = {Felix Wortmann and Kristina Flüchter},
+  date         = {2015-03},
+  journaltitle = {Business {\&} Information Systems Engineering},
+  title        = {Internet of Things},
+  doi          = {10.1007/s12599-015-0383-3},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {3},
+  pages        = {221--224},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {57},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Xia2012,
+  author       = {Feng Xia and Laurence T. Yang and Lizhe Wang and Alexey Vinel},
+  date         = {2012-08},
+  journaltitle = {International Journal of Communication Systems},
+  title        = {Internet of Things},
+  doi          = {10.1002/dac.2417},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {9},
+  pages        = {1101--1102},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {25},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Madakam2015,
+  author       = {Somayya Madakam and R. Ramaswamy and Siddharth Tripathi},
+  date         = {2015-08},
+  journaltitle = {Journal of Computer and Communications},
+  title        = {Internet of Things ({IoT}): A Literature Review},
+  doi          = {10.4236/jcc.2015.35021},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {5},
+  pages        = {164--173},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {03},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Ahmed2021,
+  author       = {Majd S. Ahmed},
+  date         = {2021-04},
+  journaltitle = {Materials Today: Proceedings},
+  title        = {Designing of internet of things for real time system},
+  doi          = {10.1016/j.matpr.2021.03.527},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {5},
+  pages        = {164--173},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {03},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Babu2021,
+  author       = {T. Babu and H. Roopa and Arvind Kumar Shukla and D. Stalin David and S. Jayadatta and A.S. Rajesh},
+  date         = {2021-11},
+  journaltitle = {Materials Today: Proceedings},
+  title        = {Internet of things-based automation design and organizational innovation of manufacturing enterprises},
+  doi          = {10.1016/j.matpr.2021.10.459},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {5},
+  pages        = {164--173},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {03},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Zhou2017,
+  author       = {Bing Zhou},
+  date         = {2017-11},
+  journaltitle = {International Journal of Online Engineering ({iJOE})},
+  title        = {A Wireless Internet of Things Architecture Based on Mobile Internet},
+  doi          = {10.3991/ijoe.v13i10.7745},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {10},
+  pages        = {132},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {13},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@Article{Choi2021,
+  author       = {Wonyoung Choi and Jisu Kim and SangEun Lee and Eunil Park},
+  date         = {2021-06},
+  journaltitle = {Journal of Cleaner Production},
+  title        = {Smart home and internet of things: A bibliometric study},
+  doi          = {10.1016/j.jclepro.2021.126908},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {10},
+  pages        = {126908},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {301},
+  isbn         = {1587144565},
+  publisher    = {CISCO},
+}
+
+@InCollection{Kramp2013,
+  author       = {Thorsten Kramp and Rob van Kranenburg and Sebastian Lange},
+  booktitle    = {Enabling Things to Talk},
+  date         = {2013-06},
+  title        = {Introduction to the Internet of Things},
+  doi          = {10.1007/978-3-642-40403-0_1},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--10},
+  publisher    = {Springer Berlin Heidelberg},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {301},
+  journaltitle = {Journal of Cleaner Production},
+}
+
+@Book{Goodwin2010,
+  author       = {Steven Goodwin},
+  date         = {2010-06},
+  title        = {Smart Home Automation with Linux},
+  doi          = {10.1007/978-1-4302-2779-3},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--10},
+  publisher    = {Apress},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {301},
+  booktitle    = {Enabling Things to Talk},
+  journaltitle = {Journal of Cleaner Production},
+}
+
+@Article{Setz2021,
+  author       = {Brian Setz and Sebastian Graef and Desislava Ivanova and Alexander Tiessen and Marco Aiello},
+  date         = {2021-06},
+  journaltitle = {{IEEE} Access},
+  title        = {A Comparison of Open-Source Home Automation Systems},
+  doi          = {10.1109/access.2021.3136025},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {10},
+  pages        = {167332--167352},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {9},
+  booktitle    = {Enabling Things to Talk},
+  isbn         = {1587144565},
+  publisher    = {Apress},
+}
+
+@Article{Sowah2020,
+  author       = {Robert A. Sowah and Dale E. Boahene and Dalton C. Owoh and Rexford Addo and Godfrey A. Mills and Wiafe Owusu-Banahene and Gifty Buah and Baffour Sarkodie-Mensah},
+  date         = {2020-10},
+  journaltitle = {Journal of Sensors},
+  title        = {Design of a Secure Wireless Home Automation System with an Open Home Automation Bus ({OpenHAB} 2) Framework},
+  doi          = {10.1155/2020/8868602},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {10},
+  pages        = {1--22},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {2020},
+  booktitle    = {Enabling Things to Talk},
+  isbn         = {1587144565},
+  publisher    = {Apress},
+}
+
+@InProceedings{Sowah2018,
+  author       = {Robert A. Sowah and Abdul R. Ofoli and Michael K. Tetteh and Richard A. Opoku and Stephen K. Armoo},
+  booktitle    = {2018 {IEEE} 7th International Conference on Adaptive Science {\&} Technology ({ICAST})},
+  date         = {2018-08},
+  title        = {Demand Side Management of Smart Homes Using {OpenHAB} Framework for Interoperability of Devices},
+  doi          = {10.1109/icastech.2018.8506917},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--22},
+  publisher    = {{IEEE}},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {2020},
+  journaltitle = {Journal of Sensors},
+}
+
+@InProceedings{Parocha2019,
+  author       = {Raymark C. Parocha and Erees Queen B. Macabebe},
+  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  date         = {2019-11},
+  title        = {Implementation of Home Automation System Using {OpenHAB} Framework for Heterogeneous {IoT} Devices},
+  doi          = {10.1109/iotais47347.2019.8980370},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--22},
+  publisher    = {{IEEE}},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {2020},
+  journaltitle = {Journal of Sensors},
+}
+
+@Book{Jain2021,
+  author       = {Rishabh Jain},
+  date         = {2021-11},
+  title        = {Advanced Home Automation Using Raspberry Pi},
+  doi          = {10.1007/978-1-4842-7274-9},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--22},
+  publisher    = {Apress},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {2020},
+  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  journaltitle = {Journal of Sensors},
+}
+
+@Book{AlWaeli2019,
+  author       = {Ali H. A. Al-Waeli and Hussein A. Kazem and Miqdam Tariq Chaichan and Kamaruzzaman Sopian},
+  date         = {2019-11},
+  title        = {Photovoltaic/Thermal ({PV}/T) Systems},
+  doi          = {10.1007/978-3-030-27824-3},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  isbn         = {1587144565},
+  number       = {10},
+  pages        = {1--22},
+  publisher    = {Springer International Publishing},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {2020},
+  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  journaltitle = {Journal of Sensors},
+}
+
+@Article{Kouro2015,
+  author       = {Samir Kouro and Jose I. Leon and Dimitri Vinnikov and Leopoldo G. Franquelo},
+  date         = {2015-03},
+  journaltitle = {{IEEE} Industrial Electronics Magazine},
+  title        = {Grid-Connected Photovoltaic Systems: An Overview of Recent Research and Emerging {PV} Converter Technology},
+  doi          = {10.1109/mie.2014.2376976},
+  editor       = {Subhas Chandra Mukhopadhyay},
+  number       = {1},
+  pages        = {47--61},
+  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
+  volume       = {9},
+  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
+  isbn         = {1587144565},
+  publisher    = {Springer International Publishing},
+}
+
+@Article{Ashton_2009,
+  author       = {Ashton, Kevin},
+  date         = {2009-06-22},
+  journaltitle = {RFID journal},
+  title        = {That ‘internet of things’ thing},
+  number       = {7},
+  pages        = {97-114},
+  volume       = {22},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
